Fixed visibility Accedi menu item

--- a/Molise5Stelle/style.css
+++ b/Molise5Stelle/style.css
@@ -8,17 +8,6 @@
   content: "\f00d" !important;
 }
 
-#menu-item-12908{
-  background-color: #ccc;
-  color: #505050;
-}
-
-@media (min-width: 60em){
-  #menu-item-12908{
-    display: none;
-  }
-}
-
 .fp-credits{
   max-width: 1440px;
   margin: 0 auto;
@@ -1455,7 +1444,16 @@ footer.m5s-footer span:last-child {
   }
 }
 
+.main-navigation .primary-menu>li#menu-item-12908{
+  background-color: #ccc;
+  color: #505050;
+}
 
+@media (min-width: 60em){
+  .main-navigation .primary-menu>li#menu-item-12908{
+    display: none;
+  }
+}
 
 
 
